--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "biome check .",
+    "test": "vitest --run"
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
@@ -37,7 +38,8 @@
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "overrides": {
     "@types/react": "19.2.14",
